# parallax

./: .gitignore  README.md  index.html  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: main.rs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli_server.rs  lib.rs  pty.rs  storage.rs
src/components/: ConfirmDialog.tsx  GroupList.tsx  NotesEditor.tsx  PaneTree.tsx  Settings.tsx  Sidebar.tsx  Terminal.tsx  icons.tsx
src/ipc/: cli.ts  dragDrop.ts  paneRegistry.ts  pty.ts  storage.ts
src/state/: confirm.ts  groups.ts  layout.ts  settings.ts
src/themes/: index.ts
