[package]
name = "parallax"
version = "0.1.0"
description = "Terminal workspace organizer"
authors = ["Ken Zhang"]
edition = "2021"

[lib]
name = "parallax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
dashmap = "6.1.0"
base64 = "0.22.1"

